<resources>
    <string name="app_name">Filamu</string>
    <string name="movies">Movies</string>
    <string name="tv">TV</string>
    <string name="saved">Saved</string>
    <string name="background_image">Background Image</string>
    <string name="title">Title</string>
    <string name="rating">Rating: 7 /10</string>
    <string name="now_playing">Now Playing</string>
    <string name="view_all">View All</string>
    <string name="popular">Popular</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="genreText">Action, Fantasy, Drama</string>
    <string name="overviewText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras odio turpis, auctor at arcu non, tincidunt placerat sem. Donec et ligula et augue tristique tempor. Fusce auctor ipsum ultricies lectus viverra, ut tempus dui volutpat. Mauris molestie libero diam, llamcorper quam rutrum. Donec tristique massa mi, id consequat odio rutrum ac. In a aliquet tellus.</string>
    <string name="creditsCast">Cast</string>
    <string name="cast_name">David Lutta</string>
    <string name="cast_role">Director</string>
    <string name="creditsCrew">Crew</string>
    <string name="trailers">Trailers</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="profilepic">profilepic</string>
    <string name="name">David Lutta</string>
    <string name="job">Acting</string>
    <string name="dob">Born: 20 June 1992</string>
    <string name="POB">Shawnee, Oklahoma, USA</string>
    <string name="known_for">Known For</string>
    <string name="personIntentExtraName">personId</string>
    <string name="movieIntentExtraName">id</string>
    <string name="saved_items">Saved Items</string>
    <string name="delete">delete all data</string>
    <string name="save">Save</string>
    <string name="airing_today">Airing Today</string>
    <string name="on_the_air">On The Air</string>
    <string name="popular_series">popular Series</string>
    <string name="category">Category</string>
    <string name="firstEpisode">First Episode: 2/30/2020</string>
    <string name="numOfEpisodes">Number of Seasons: 3</string>
    <string name="runtime">RunTime: 55mins</string>
    <string name="status">Status: Running</string>
    <string name="production_companies">Production Companies</string>
    <string name="similar_shows">Similar Shows</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_movie">Search Movie or Series</string>
    <string name="search">Search</string>
    <string name="tv_series">Tv Series</string>
</resources>
