<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:elevation="1dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/posterImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background_image"
            android:scaleType="centerCrop"
            android:src="@drawable/poster" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/savedTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ellipsize="none"
        android:fontFamily="@font/nunito_semi_bold"
        android:maxLines="2"
        android:scrollHorizontally="false"
        android:text="@string/title"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <TextView
        android:id="@+id/savedGenreTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunito_light"
        android:text="@string/genreText"
        android:textSize="12sp"
        android:textStyle="bold"
        android:maxLines="2"
        android:scrollHorizontally="false"
        android:ellipsize="none"
        app:layout_constraintStart_toStartOf="@+id/savedTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/savedTitleTextView" />

    <TextView
        android:id="@+id/savedRatingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rating"
        android:fontFamily="@font/nunito_light"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/savedGenreTextView"
        app:layout_constraintTop_toBottomOf="@+id/savedGenreTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>