<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.MoviesFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/popularTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/popular"
                android:textColor="@color/textColor"
                android:textFontWeight="900"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/discoverTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/now_playing"
                android:textColor="@color/textColor"
                android:textFontWeight="900"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="@+id/popular_movies_recyclerView"
                app:layout_constraintTop_toBottomOf="@+id/popular_movies_recyclerView" />

            <TextView
                android:id="@+id/upcomingMoviesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/upcoming_movies"
                android:textColor="@color/textColor"
                android:textFontWeight="900"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="@+id/now_playing_recyclerView"
                app:layout_constraintTop_toBottomOf="@+id/now_playing_recyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popular_movies_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/popularTitleTextView"
                app:layout_constraintTop_toBottomOf="@+id/popularTitleTextView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/view_all"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/popularTitleTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.88"
                app:layout_constraintStart_toEndOf="@+id/popularTitleTextView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.recyclerview.widget.RecyclerView
                android:padding="1dp"
                android:id="@+id/upcomingMoviesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/upcomingMoviesTitle"
                app:layout_constraintTop_toBottomOf="@+id/upcomingMoviesTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/now_playing_recyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/popular_movies_recyclerView"
                app:layout_constraintTop_toBottomOf="@+id/discoverTitleTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</ScrollView>